# robot_description

bqr3_arm_description/: CMakeLists.txt  package.xml
bqr3_arm_description/launch/: rviz_display.launch.py
bqr3_arm_description/meshes/: base_link_bounding.STL  base_link_bounding1.STL  forearm.STL  forearm_bounding.STL  paw_left.STL  paw_right.STL  upper_arm_bounding.STL  wrist_pitch_bounding.STL  wrist_yall.STL  wrist_yall_bounding.STL
bqr3_arm_description/urdf/: bqr3_arm.urdf
bqr3_description/: CMakeLists.txt  package.xml
bqr3_description/launch/: rviz_display.launch.py
bqr3_description/meshes/: base_link.STL
bqr3_description/urdf/: bqr3.urdf
galileo_mini_description/: CMakeLists.txt  package.xml
galileo_mini_description/config/: robot_control.yaml
galileo_mini_description/config/ocs2/: reference.info  task.info
galileo_mini_description/config/rviz/: rviz_display.rviz
galileo_mini_description/launch/: rviz_display.launch.py
galileo_mini_description/urdf/: robot.urdf
galileo_mini_description/xml/: galileo_mini.xml  scene.xml
galileo_mini_x5_description/: CMakeLists.txt  package.xml
galileo_mini_x5_description/launch/: rviz_display.launch.py
galileo_mini_x5_description/urdf/: galileo_mini_x5.urdf
galileo_mini_x5_description/xml/: galileo_mini_x5.xml  scene.xml
galileo_v1d6_description/: CMakeLists.txt  package.xml
galileo_v1d6_description/launch/: rviz_display.launch.py
galileo_v1d6_description/urdf/: galileo_v1d6.urdf
galileo_v1d6_description/xml/: scene.xml
galileo_v1d6_x5_description/: CMakeLists.txt  package.xml
galileo_v1d6_x5_description/launch/: rviz_display.launch.py
galileo_v1d6_x5_description/meshes/: TRUCK.STL
galileo_v1d6_x5_description/urdf/: galileo_v1d6_x5.urdf
galileo_v1d6_x5_description/xml/: grq20_v1d6.xml
x5_description/: CMakeLists.txt  package.xml
x5_description/launch/: rviz_display.launch.py
x5_description/urdf/: x5.urdf
x5_description/xml/: scene.xml  x5.xml
