<package format="2">
    <name>galileo_v1d6_x5_description</name>
    <version>1.0.0</version>
    <description>
        URDF Description package for galileo_v1d6_description
    </description>
    <author>TODO</author>
    <maintainer email="TODO@email.com"/>
    <license>BSD</license>

    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>